--- a/phuza/Cell/FavoritesMoreTableViewCell.xib
+++ b/phuza/Cell/FavoritesMoreTableViewCell.xib
@@ -25,7 +25,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rqe-4m-cT6">
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rqe-4m-cT6">
                         <rect key="frame" x="149" y="206" width="22" height="22"/>
                         <state key="normal" image="Add More Button"/>
                     </button>
