--- a/phuza/Base.lproj/Main.storyboard
+++ b/phuza/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rHC-GF-ZIe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rHC-GF-ZIe">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +13,7 @@
         <!--Home View Controller-->
         <scene sceneID="fEV-pZ-hoc">
             <objects>
-                <viewController id="fty-ga-fPC" customClass="HomeViewController" customModule="phuza" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="kHomeViewController" id="fty-ga-fPC" customClass="HomeViewController" customModule="phuza" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Kft-EZ-o81">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -347,25 +347,25 @@
                                 <color key="textColor" red="0.41568627450980389" green="0.43137254901960786" blue="0.49019607843137253" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Continue as Wade" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pbn-AY-mWl">
-                                <rect key="frame" x="122" y="186" width="131.5" height="18.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Continue as" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pbn-AY-mWl">
+                                <rect key="frame" x="145" y="185.5" width="85.5" height="19"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
                                 <color key="textColor" red="0.2196078431372549" green="0.2196078431372549" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="phuza will receive the following info: your public profile, email address, profile photo." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tc8-iU-zgg">
-                                <rect key="frame" x="30" y="232.5" width="315" height="33.5"/>
+                                <rect key="frame" x="30" y="264.5" width="315" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.22352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r3o-0c-U31">
-                                <rect key="frame" x="116" y="273" width="143" height="37"/>
+                                <rect key="frame" x="113.5" y="305" width="148" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="lpa-nF-GkB"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <state key="normal" title="Edit the info you privide"/>
+                                <state key="normal" title="Edit the info you provide"/>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock" translatesAutoresizingMaskIntoConstraints="NO" id="lr1-vF-sLh">
                                 <rect key="frame" x="58" y="516.5" width="12" height="15"/>
@@ -374,19 +374,27 @@
                                     <constraint firstAttribute="width" constant="12" id="MsJ-8Q-SAT"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qLB-6l-Axd">
+                                <rect key="frame" x="168" y="212" width="39.5" height="18.5"/>
+                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
+                                <color key="textColor" red="0.22" green="0.22" blue="0.224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="vvL-xy-b3e" firstAttribute="leading" secondItem="zfv-8N-TMe" secondAttribute="leading" constant="6" id="8II-Q9-I6m"/>
                             <constraint firstItem="Pbn-AY-mWl" firstAttribute="bottom" secondItem="lEp-tx-yyC" secondAttribute="bottom" constant="5" id="8wv-IE-EGl"/>
-                            <constraint firstItem="tc8-iU-zgg" firstAttribute="top" secondItem="Pbn-AY-mWl" secondAttribute="bottom" constant="28" id="9rX-P7-OFh"/>
+                            <constraint firstItem="tc8-iU-zgg" firstAttribute="top" secondItem="Pbn-AY-mWl" secondAttribute="bottom" constant="60" id="9rX-P7-OFh"/>
                             <constraint firstItem="lr1-vF-sLh" firstAttribute="centerY" secondItem="8rE-VR-etV" secondAttribute="centerY" id="AKS-EN-6wQ"/>
                             <constraint firstItem="vvL-xy-b3e" firstAttribute="width" secondItem="Nrl-Eb-B6w" secondAttribute="width" multiplier="0.474667" id="CWN-VE-XAk"/>
                             <constraint firstItem="Pbn-AY-mWl" firstAttribute="centerX" secondItem="Nrl-Eb-B6w" secondAttribute="centerX" id="Caj-Tb-hBX"/>
+                            <constraint firstItem="qLB-6l-Axd" firstAttribute="top" secondItem="Pbn-AY-mWl" secondAttribute="bottom" constant="7.5" id="CkG-v2-pk8"/>
                             <constraint firstItem="tc8-iU-zgg" firstAttribute="leading" secondItem="zfv-8N-TMe" secondAttribute="leading" constant="30" id="Fql-wv-eJS"/>
                             <constraint firstItem="kAo-s8-Ofq" firstAttribute="leading" secondItem="vvL-xy-b3e" secondAttribute="trailing" constant="7" id="Jef-uW-2bf"/>
                             <constraint firstItem="zfv-8N-TMe" firstAttribute="trailing" secondItem="kAo-s8-Ofq" secondAttribute="trailing" constant="6" id="QW7-Hk-00z"/>
                             <constraint firstItem="r3o-0c-U31" firstAttribute="top" secondItem="tc8-iU-zgg" secondAttribute="bottom" constant="7" id="cU1-s2-FTf"/>
+                            <constraint firstItem="qLB-6l-Axd" firstAttribute="centerX" secondItem="zfv-8N-TMe" secondAttribute="centerX" id="d6X-BP-Kq9"/>
                             <constraint firstItem="lEp-tx-yyC" firstAttribute="centerX" secondItem="Nrl-Eb-B6w" secondAttribute="centerX" id="eje-zd-ivL"/>
                             <constraint firstItem="zfv-8N-TMe" firstAttribute="bottom" secondItem="kAo-s8-Ofq" secondAttribute="bottom" constant="20" id="etz-sO-uaN"/>
                             <constraint firstItem="zfv-8N-TMe" firstAttribute="trailing" secondItem="tc8-iU-zgg" secondAttribute="trailing" constant="30" id="imc-Tz-6Tl"/>
@@ -402,6 +410,7 @@
                     <navigationItem key="navigationItem" title="Log in with Facebook" id="RWL-re-SlG"/>
                     <connections>
                         <outlet property="cancelButton" destination="vvL-xy-b3e" id="PlH-om-DxF"/>
+                        <outlet property="userNameLabel" destination="qLB-6l-Axd" id="JyZ-k9-D4X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vO0-B7-tFK" userLabel="First Responder" sceneMemberID="firstResponder"/>
